# ecosnap2025

./: .replit  app.py  models.py  openai_utils.py  pyproject.toml  requirements.txt  waste_classification.db
attached_assets/: app.py  replit.nix
static/css/: custom.css
static/js/: main.js
templates/: base.html  index.html  waste_info.html
